Implemented: AuditLog, UserDashboard. Added Unit testing for components